--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,11 +6,16 @@
     --clr-light-gray:   #aaa;
     --clr-dark-gray:    #666;
     --clr-black:        #000;
-    --clr-blue:         #0088AA;
-    --clr-orange:       #FF6600;
+    --clr-blue:         #0088AA; // -- clr - blue
+    --clr-orange:       #FF6600; // -- clr - orange
+    --clr-lightOrange:  #e6c877; // -- clr -
     --clr-red :         #d30000;
     --clr-yellow:       #f7f700;
     --clr-gold:         #ffd700;
+    --clr-green:        #065a38;
+    
+    // --clr-primary:      var(--clr-blue);
+    // --clr-secondary:    var(--clr-Orange);
     
     // --------------------------
     // Nosotros
