--- a/sass/components/_navicon.scss
+++ b/sass/components/_navicon.scss
@@ -29,7 +29,7 @@
     position: absolute;
     height: 3px;
     width: 100%;
-    background: #d3531a;
+    background: var(--clr-secondary);
     border-radius: 3px;
     opacity: 1;
     left: 0;
