--- a/sass/components/_testimonial.scss
+++ b/sass/components/_testimonial.scss
@@ -9,7 +9,7 @@ a{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    background-color: var(--clr-blue);
+    background-color: var(--clr-primary);
     padding-bottom: 5em;
 }
 .testimonial-heading{
