--- a/sass/layout/_burger.scss
+++ b/sass/layout/_burger.scss
@@ -18,7 +18,7 @@
 // .menu-toggle__pan-arriba,
 // .menu-toggle__medallon,
 // .menu-toggle__pan-abajo {
-//     background: var(--clr-orange);
+//     background: var(--clr-secondary);
 //     border-radius: 5px;
 //     height: 3px;
 //     margin: 5px 0;
