--- a/views/alta.html
+++ b/views/alta.html
@@ -8,8 +8,8 @@
     }
 
     .enunciado {
-        border: 3px solid var(--clr-blue);
-        background-color: var(--clr-blue);
+        border: 3px solid var(--clr-primary);
+        background-color: var(--clr-primary);
         color: var(--clr-white);
         font: bold;
         padding: 0.5em 1em;
@@ -30,7 +30,7 @@
     /* .tabla,  */
     .regFiltr:hover, .regEdit:hover, .regAdd:hover{
         cursor: pointer;
-        border-bottom: 2px solid var(--clr-orange);
+        border-bottom: 2px solid var(--clr-secondary);
     }
 
 </style>
