--- a/views/inicio.html
+++ b/views/inicio.html
@@ -3,6 +3,6 @@
     <section class="marco-beneficios"></section>
     <section class="section-cards cards-container"></section>
     
-    <section class="cards-container"></section>
+    <!-- <section class="cards-container"></section> -->
     <section id = "testimonials" class="marco-testimonios"></section>
 
