--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,11 @@
   --clr-black: #000;
   --clr-blue: #0088AA;
   --clr-orange: #FF6600;
+  --clr-lightOrange: #e6c877;
   --clr-red: #d30000;
   --clr-yellow: #f7f700;
   --clr-gold: #ffd700;
+  --clr-green: #065a38;
   --clr-1: #f25c00;
   --clr-2: #ec4559;
   --clr-3: #bf4686;
@@ -468,6 +470,16 @@ body {
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
+select {
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
+
 /* 
     font-family: 'Poppins', sans-serif;
 */
@@ -786,8 +798,24 @@ body {
   display: block;
 }
 
+.section-deseo {
+  padding: 1em;
+  position: fixed;
+  background-color: #f1f2f3;
+  top: 150px;
+  bottom: 150px;
+  left: 50px;
+  right: 50px;
+  z-index: 100;
+  box-shadow: 0.5em 0.5em 1em rgba(0, 0, 0, 0.3);
+  display: none;
+}
+.section-deseo--open {
+  display: block;
+}
+
 .marco-carousel {
-  background: var(--clr-orange);
+  background: var(--clr-secondary);
   padding: 50px;
 }
 
@@ -799,9 +827,9 @@ body {
 }
 
 .container h1 {
-  color: var(--clr-orange);
+  color: var(--clr-secondary);
   font-size: 2.5em;
-  border-bottom: 1px solid var(--clr-orange);
+  border-bottom: 1px solid var(--clr-secondary);
 }
 
 .carousel-button {
@@ -809,14 +837,14 @@ body {
   height: 3em;
   font: verdana 1em bold var(--clr-white);
   border-radius: 1em;
-  border-color: var(--clr-orange);
-  background-color: var(--clr-orange);
+  border-color: var(--clr-secondary);
+  background-color: var(--clr-secondary);
   color: var(--clr-white);
   margin-top: 2em;
 }
 .carousel-button:hover {
-  border-color: var(--clr-blue);
-  background-color: var(--clr-blue);
+  border-color: var(--clr-primary);
+  background-color: var(--clr-primary);
 }
 
 .carousel {
@@ -1063,7 +1091,7 @@ body {
   position: absolute;
   height: 3px;
   width: 100%;
-  background: #d3531a;
+  background: var(--clr-secondary);
   border-radius: 3px;
   opacity: 1;
   left: 0;
@@ -1110,7 +1138,7 @@ a {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  background-color: var(--clr-blue);
+  background-color: var(--clr-primary);
   padding-bottom: 5em;
 }
 
@@ -1468,17 +1496,17 @@ a {
   border: none;
   padding: 0.5em;
   margin-right: 1em;
-  color: var(--clr-blue);
+  color: var(--clr-primary);
 }
 .footer__registro-mailing button {
   padding: 0.5em 3em;
   align-self: center;
   border: none;
   border-radius: 15px;
-  color: var(--clr-blue);
+  color: var(--clr-primary);
 }
 .footer__registro-mailing button:hover {
-  background-color: var(--clr-blue);
+  background-color: var(--clr-primary);
   color: var(--clr-white);
 }
 
@@ -1574,12 +1602,30 @@ Línea Bienvenida
 *********************************/
 .main-header__linea-bienvenida {
   box-sizing: border-box;
-  background-color: var(--clr-orange);
+  background-color: var(--clr-secondary);
   color: var(--clr-white);
   display: flex;
   justify-content: space-between;
   padding: 0.5em 1em;
   width: 100%;
+}
+
+.topRedesSociales, .main-header__linea-segundaMitad {
+  box-sizing: border-box;
+  background-color: var(--clr-secondary);
+  color: var(--clr-white);
+  display: flex;
+  justify-content: baseline;
+  margin-right: 1em;
+}
+
+.selectorColores #colores {
+  font-size: 0.9em;
+  border: none;
+  color: var(--clr-white);
+  background-color: var(--clr-secondary);
+  padding: 0 0.5em;
+  margin: 0;
 }
 
 /*********************************
@@ -1606,11 +1652,11 @@ NAV BAR
   text-align: center;
 }
 .nav-bar__nav-link-active {
-  background-color: var(--clr-blue);
+  background-color: var(--clr-primary);
   color: var(--clr-white);
 }
 .nav-bar__nav-link:hover {
-  background-color: var(--clr-orange);
+  background-color: var(--clr-secondary);
   color: var(--clr-white);
 }
 
@@ -1630,7 +1676,7 @@ SEARCH BAR
 }
 .search-bar__logo-container {
   display: block;
-  background-image: url(../../img/Connecticus_01_h35w270.png);
+  background-image: url(../img/Connecticus_01_h35w270.png);
   background-position-x: center;
   background-position-y: center;
   background-repeat: no-repeat;
@@ -1650,6 +1696,10 @@ SEARCH BAR
   display: block;
   margin: 0 auto;
 }
+.search-bar__deseo-container {
+  display: block;
+  margin: 0 auto;
+}
 .search-bar__user-container {
   display: block;
   margin: 0 auto;
@@ -1665,7 +1715,7 @@ SEARCH BAR
   float: right;
   padding: 0.2em 1em !important;
   border: none;
-  border-bottom: 2px solid var(--clr-orange);
+  border-bottom: 2px solid var(--clr-secondary);
   margin-right: 1em;
   font-size: 0.9em;
   color: var(--clr-dark-gray);
@@ -1678,10 +1728,11 @@ SEARCH BAR
   font-size: 1.1em;
   border: none;
   cursor: pointer;
-  color: var(--clr-orange);
+  color: var(--clr-secondary);
 }
 
 .search-bar__carrito-container button,
+.search-bar__deseo-container button,
 .search-bar__user-container button,
 .search-bar__burger-container {
   padding: 0.3em 0.7em;
@@ -1689,7 +1740,7 @@ SEARCH BAR
   border: none;
   font-size: 1.2em;
   cursor: pointer;
-  color: var(--clr-orange);
+  color: var(--clr-secondary);
 }
 
 .nav-bar_botones {
@@ -1705,7 +1756,7 @@ SEARCH BAR
 }
 @media (max-width: 768px) {
   .search-bar__logo-container {
-    background-image: url(../../img/NN_02_h35w42.png);
+    background-image: url(../img/NN_02_h35w42.png);
     background-repeat: no-repeat;
     width: 100px;
   }
@@ -1768,12 +1819,12 @@ option {
 
 #alta-fieldset {
   background-color: var(--clr-white);
-  border: 1px solid var(--clr-orange);
+  border: 1px solid var(--clr-secondary);
   margin: 0 auto;
 }
 
 .alta-legend {
-  background-color: var(--clr-orange);
+  background-color: var(--clr-secondary);
   color: var(--clr-white);
   width: 100%;
   padding: 0.6em;
@@ -1786,17 +1837,17 @@ option {
   margin: 0 auto;
 }
 .alta-input-text label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding-left: 0.5em;
 }
 .alta-input-text input {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 90%;
   padding: 0.2em 0.5em;
   margin: 1em;
 }
 .alta-input-text textarea {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 90%;
   padding: 0.2em 0.5em;
   margin: 1em;
@@ -1806,18 +1857,18 @@ option {
   margin: 0 auto;
 }
 .alta-input-combo label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding-left: 0.5em;
 }
 .alta-input-combo input {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 90%;
   padding-left: 0.5em;
   padding: 0.2em 0.5em;
   margin: 1em;
 }
 .alta-input-combo option {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 100%;
   padding: 0.2em 0.5em;
   margin: 1em;
@@ -1858,7 +1909,7 @@ option {
   padding-left: 0.5em;
 }
 .alta-input-check label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding-left: 0.5em;
 }
 
@@ -1874,7 +1925,7 @@ option {
   text-transform: uppercase;
   font-size: 0.8em;
   font-weight: 700;
-  background: var(--clr-blue);
+  background: var(--clr-primary);
   color: var(--clr-white);
   border: none;
   margin: 0.3em;
@@ -1882,7 +1933,7 @@ option {
   min-width: 12em;
 }
 .alta-btn-form:hover, .alta-btn-form:focus {
-  background: var(--clr-orange);
+  background: var(--clr-secondary);
   transition: background-color 1s ease-out;
   cursor: pointer;
 }
@@ -1906,15 +1957,15 @@ option {
 .contacto .contacto_titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   border-bottom: 3px solid;
   padding: 0.5em;
 }
 .contacto div {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
 }
 .contacto em {
-  color: var(--clr-orange);
+  color: var(--clr-secondary);
   font-weight: 500;
 }
 
@@ -1932,12 +1983,12 @@ option {
   margin: 0 auto;
 }
 .contacto-input-text label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding-left: 1em;
 }
 .contacto-input-text input {
   border: none;
-  border-bottom: 1px solid var(--clr-blue);
+  border-bottom: 1px solid var(--clr-primary);
   width: 90%;
   padding: 0.2em 0.5em;
   margin: 1em;
@@ -1948,7 +1999,7 @@ option {
   outline: none;
   box-shadow: none;
   resize: none;
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 90%;
   padding: 0.2em 0.5em;
   margin: 1em;
@@ -1958,7 +2009,7 @@ option {
   padding-left: 0.5em;
 }
 .contacto-input-optin label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding: 1em;
   margin: 1em;
 }
@@ -1967,18 +2018,18 @@ option {
   margin: 0 auto;
 }
 .contacto-input-combo label {
-  color: var(--clr-blue);
+  color: var(--clr-primary);
   padding-left: 0.5em;
 }
 .contacto-input-combo input {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 90%;
   padding-left: 0.5em;
   padding: 0.2em 0.5em;
   margin: 1em;
 }
 .contacto-input-combo option {
-  border: 1px solid var(--clr-blue);
+  border: 1px solid var(--clr-primary);
   width: 100%;
   padding: 0.2em 0.5em;
   margin: 1em;
@@ -1997,7 +2048,7 @@ option {
   text-transform: uppercase;
   font-size: 0.8em;
   font-weight: 700;
-  background: var(--clr-blue);
+  background: var(--clr-primary);
   color: var(--clr-white);
   border: none;
   margin: 0.3em;
@@ -2005,7 +2056,7 @@ option {
   min-width: 12em;
 }
 .contacto-btn-form:hover, .contacto-btn-form:focus {
-  background: var(--clr-orange);
+  background: var(--clr-secondary);
   transition: background-color 1s ease-out;
   cursor: pointer;
 }
