--- a/sass/components/_cart.scss
+++ b/sass/components/_cart.scss
@@ -13,3 +13,19 @@
         display: block;
     }
 }
+
+.section-deseo {
+    padding: 1em;
+    position: fixed;
+    background-color: #f1f2f3;
+    top: 150px;
+    bottom: 150px;
+    left: 50px;
+    right: 50px;
+    z-index: 100;
+    box-shadow: .5em .5em 1em rgba(0, 0, 0, .3);
+    display: none;
+    &--open {
+        display: block;
+    }
+}
