--- a/sass/pages/_alta.scss
+++ b/sass/pages/_alta.scss
@@ -25,11 +25,11 @@ option              {    display: table-cell; padding-left: 0.2em; margin: 0.6em
 }
 #alta-fieldset{
 background-color: var(--clr-white);
-border: 1px solid var(--clr-orange);
+border: 1px solid var(--clr-secondary);
 margin: 0 auto;
 }
 .alta-legend{
-    background-color: var(--clr-orange);
+    background-color: var(--clr-secondary);
     color: var(--clr-white);
     width: 100%;
     padding: .6em;
@@ -40,17 +40,17 @@ margin: 0 auto;
 .alta-input-text{
     margin: 0 auto;
     label{
-        color: var(--clr-blue);
+        color: var(--clr-primary);
         padding-left: 0.5em;
     }
     input {
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 90%;
         padding: 0.2em 0.5em;
         margin: 1em;
     }
     textarea{
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 90%;
         padding: 0.2em 0.5em;
         margin: 1em;
@@ -59,18 +59,18 @@ margin: 0 auto;
 .alta-input-combo{
     margin: 0 auto;
     label{
-        color: var(--clr-blue);
+        color: var(--clr-primary);
         padding-left: 0.5em;
     }
     input {
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 90%;
         padding-left: 0.5em;
         padding: 0.2em 0.5em;
         margin: 1em;
     }
     option {
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 100%;
         padding: 0.2em 0.5em;
         margin: 1em;
@@ -123,7 +123,7 @@ padding: 0.8em;
     padding-left: 0.5em;
     
     label{
-        color: var(--clr-blue);
+        color: var(--clr-primary);
         padding-left: 0.5em;
     }
 }
@@ -142,7 +142,7 @@ padding: 0.8em;
     font-size: .8em;
     font-weight: 700;
 
-    background: var(--clr-blue);
+    background: var(--clr-primary);
     color: var(--clr-white);
     border: none;
     margin: 0.3em;
@@ -151,7 +151,7 @@ padding: 0.8em;
 
     &:hover,
     &:focus{
-        background: var(--clr-orange);
+        background: var(--clr-secondary);
         transition: background-color 1s ease-out;
         cursor: pointer;
     }
