--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -32,16 +32,16 @@
     .contacto_titulo{
         font-family: 'Poppins', sans-serif;
         font-weight: 300;
-        color:  var(--clr-blue);
+        color:  var(--clr-primary);
         border-bottom: 3px solid;
         padding: 0.5em;
     }
     div{
-        color: var(--clr-blue);
+        color: var(--clr-primary);
     }
     em{ 
         
-        color:  var(--clr-orange);
+        color:  var(--clr-secondary);
         font-weight: 500;
     }
 }
@@ -60,12 +60,12 @@
     .contacto-input-text{
         margin: 0 auto;
         label{
-            color: var(--clr-blue);
+            color: var(--clr-primary);
             padding-left: 1em;
         }
         input {
             border:none;
-            border-bottom: 1px solid var(--clr-blue);
+            border-bottom: 1px solid var(--clr-primary);
             width: 90%;
             padding: 0.2em 0.5em;
             margin: 1em;
@@ -80,7 +80,7 @@
         
             resize: none;
 
-            border: 1px solid var(--clr-blue);
+            border: 1px solid var(--clr-primary);
             width: 90%;
             padding: 0.2em 0.5em;
             margin: 1em;
@@ -91,7 +91,7 @@
         padding-left: 0.5em;
     
         label{
-            color: var(--clr-blue);
+            color: var(--clr-primary);
             padding: 1em;
             margin: 1em;
         }
@@ -102,18 +102,18 @@
 .contacto-input-combo{
     margin: 0 auto;
     label{
-        color: var(--clr-blue);
+        color: var(--clr-primary);
         padding-left: 0.5em;
     }
     input {
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 90%;
         padding-left: 0.5em;
         padding: 0.2em 0.5em;
         margin: 1em;
     }
     option {
-        border: 1px solid var(--clr-blue);
+        border: 1px solid var(--clr-primary);
         width: 100%;
         padding: 0.2em 0.5em;
         margin: 1em;
@@ -135,7 +135,7 @@
     font-size: .8em;
     font-weight: 700;
 
-    background: var(--clr-blue);
+    background: var(--clr-primary);
     color: var(--clr-white);
     border: none;
     margin: 0.3em;
@@ -144,7 +144,7 @@
 
     &:hover,
     &:focus{
-        background: var(--clr-orange);
+        background: var(--clr-secondary);
         transition: background-color 1s ease-out;
         cursor: pointer;
     }
