--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 
 @import 'components/card';
 @import 'components/cart';
+@import 'components/carrito';
+@import 'components/deseo';
 @import 'components/carouselSlider';
 @import 'components/navicon';
 @import 'components/testimonial';
