--- a/views/marco-beneficios.html
+++ b/views/marco-beneficios.html
@@ -17,10 +17,10 @@
                 <span class="separador-beneficios__icon">
                     <i class="fa fa-archive imagen-beneficios"></i>
                 </span>
-                <h2>Envío gratis desde $ 2.500</h2>
+                <h2>Envío gratis desde $ 7.500,00 </h2>
                 <div>
                     <h3>Que el envío no sea un impedimento</h3>
-                    <p>Solo por estar registrado con nosotros, tenés envíos gratis en miles de productos. Es un beneficio exclusivo desde tu primer compra.</p>
+                    <p>Solo por estar registrado con nosotros, tenés envíos gratis en muchos productos. Es un beneficio exclusivo desde tu primer compra.</p>
                 </div>
 
         </div>
