--- a/views/inicio.html
+++ b/views/inicio.html
@@ -1,6 +1,11 @@
     
     <section class="marco-carousel"></section>
     <section class="marco-beneficios"></section>
+
+    <section class="section-cards__header">
+        <!-- <h1>Lorem ipsum, dolor sit amet consectetur adipisicing.</h1> -->
+        <p></p>
+    </section>
     <section class="section-cards cards-container"></section>
     
     <!-- <section class="cards-container"></section> -->
