--- a/plantillas/detalle_producto.hbs
+++ b/plantillas/detalle_producto.hbs
@@ -1,3 +1,8 @@
+<div>
+    <h3><i class="fa fa-heart"></i> | Detalle de producto</h3>
+    <h3 class="btnCierre" onclick="productoController.ocultarDetalleProducto()">X</h3>
+</div>
+<hr>
 {{#if listado.length }}
     {{#each listado}}
     <a class="card">
