--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -28,6 +28,7 @@
     &__image {
         margin: 1em;
         background-size: cover;
+        background-color: #ccc;
         height: 200px;
         background-position: center;
         transition: all .2s;
