--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'components/alta';
 @import 'components/card';
 @import 'components/cart';
 @import 'components/carrito';
@@ -18,6 +19,7 @@
 @import 'layout/burger';
 @import 'layout/footer';
 @import 'layout/header';
+@import 'layout/sumarProducto';
 // @import 'layout/promo';
 
 @import 'pages/alta';
