--- a/views/alta.html
+++ b/views/alta.html
@@ -1,176 +1,111 @@
-<style>
-    .altaProducto,
-    .seccionAlta {
-        margin: 2em auto;
-        width: 90%;
-        display: block;
-
-    }
-
-    .enunciado {
-        border: 3px solid var(--clr-primary);
-        background-color: var(--clr-primary);
-        color: var(--clr-white);
-        font: bold;
-        padding: 0.5em 1em;
-        
-    }
-
-    .tablaProducto {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-flow: wrap;
-        margin: 0.2em auto;
-        width: 98%;
-        padding: 0.5em 0;
-        border-bottom: 1px solid #666;
-    }
-
-    /* .tabla,  */
-    .regFiltr:hover, .regEdit:hover, .regAdd:hover{
-        cursor: pointer;
-        border-bottom: 2px solid var(--clr-secondary);
-    }
-
-</style>
-
-<main style="margin: 0.5em 0;">
-<section class="altaProducto seccionAlta">
-    <div class="enunciado">Alta de producto</div>
-    <div class="tablaProducto">
-            <span class="tabla">Producto</span>
-            <span>
-                <a class="regFiltr">Filtrar</a> | 
-                <a class="regEdit">Consulta</a> | 
-                <a class="regAdd">Agregar</a>
-            </span>
-    </div>
-    <div id="listaProducto" class="tablaProducto">Espacio para la tabla de productos</div>
+<div class="container-alta">
+    <hr>
+    <h2>CRUD | Alta, Baja, Modificación y Consulta</h2>
+    <hr>
     
+    <article class="article_alta">
+        <section class="aside_alta">
+            <div>Productos</div>
+            <div>Usuarios</div>
+        </section>
 
-    <div class="tablaProducto"><span class="tipoTabla">Proveedor</span><span class="new">Nuevo</span></div>
-    <div class="tablaProducto"><span class="tipoTabla">Categoría</span><span class="new">Nuevo</span></div>
-</section>
-<section class="altaUsuarios seccionAlta">
-    <div class="enunciado">Usuarios</div>
-    <div class="tablaProducto"><span class="tipoTabla">Usuarios</span><a class="new">Nuevo</a></div>
-    <div class="tablaProducto"><span class="tipoTabla">Roles</span><a class="new">Nuevo</a></div>
-</section>
+        <section class="container-alta">
+            <!-- Sección Alta de Producto -->
+            <section id="FormularioDeAltaProducto" class="noVerAltaProducto">
+                <form autocomplete="off" class="sumar-producto" id="formAltaProducto">
+                    <div class="detalleAlta detalleAlta__visible">
+                        <div class="detalleAlta__imagen">
+                            <img   class="detalleAlta__imagenDetalle"  src="/img/200x150.jpg"> 
+                            <input class="detalleAlta__input" id="imagen" type="text" placeholder="Ingresar la imagen">
+                            <span class="Mensaje"></span>
+                        </div>
+                        <div class="detalleAlta__contenido">
+                            <div class="detalleAlta__contenido-titulo">
+                                <label class="detalleAlta__label" for="nombre">Nombre: </label>
+                                <input id="nombre" type="text" placeholder="Nombre del producto" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                            
+                                <label class="detalleAlta__label" for="categoria">Categoría: </label>
+                                <input id="categoria" type="text" placeholder="Categoría" class="detalleAlta__input" list="ListaCate">
+                                <span class="Mensaje"></span>
+                            </div>
 
-    <section class="seccion__alta-producto">
-        <form action="alta.php" method="post" enctype="multipart/form-data">
-            <article class="alta-article">
-                <fieldset id="alta-fieldset">
-                    <legend class="alta-legend">Alta de producto</legend>
-                    <p class="invisible alta-input-text">
-                        <label for="producto_id">Id</label>
-                        <INPUT type="text" id="producto_id">
-                    </p>
-                    <p  class="invisible alta-input-text">
-                        <LABEL for="producto_sku">SKU</LABEL>  
-                        <INPUT type="text" id="producto_sku">
-                    </p>
-                    <p class=" alta-input-text">
-                        <LABEL for="producto_nombre">Descripción corta (35 chars)</LABEL>  
-                        <INPUT type="text" id="producto_nombre" maxlength="35">
-                    </p>
-                    <p class=" alta-input-text">
-                        <LABEL for="producto_descripcion">Detalles</LABEL>  
-                        <textarea name="producto_descripcion" id="producto_descripcion"></textarea>
-                    </p>
-                    <p  class="invisible alta-input-text">
-                        <LABEL for="producto_fechaAlta">Fecha Alta</LABEL>  
-                        <INPUT type="text" id="producto_fechaAlta">
-                    </p>
-                    <p class="invisible alta-input-text">
-                        <LABEL for="producto_estado">Estado</LABEL>  
-                        <INPUT type="text" id="producto_estado">
-                    </p>
-                    <p class="alta-input-combo">
-                        <LABEL for="producto_Categoria">Categoría</LABEL>  
-                        <select name="producto_Categoria" id="producto_Categoria" class="alta-input-combo">
-                            <option value = "Celulares">Celulares</option>
-                            <option value = "Drones">Drones</option>
-                            <option value = "Fotografía">Fotografía</option>
-                            <option value = "Ordenadores" selected>Ordenadores</option>
-                            <option value = "TV">TV</option>
-                            <option value = "Otros">Otros</option>
-                        </select>
-                    </p>
-                    <p class="alta-input-combo">
-                        <LABEL for="producto_precio">Precio lista ($)</LABEL>  
-                        <INPUT type="number" id="producto_precio" value="0" min="0" required>
-                    </P>
-                    <p class="alta-input-combo">
-                        <LABEL for="producto_stock">Existencias</LABEL>  
-                        <INPUT type="number" id="producto_stock" value="0" min="0" step="1" required>
-                    </P>
-                    
-                    <p class="invisible alta-input-combo">
-                        <LABEL for="producto_promocion">Promoción</LABEL>  
-                        <INPUT type="text" id="producto_promocion">
-                    </P>
-                    <div class="alta-input-imagenes">
-                        <p>
-                            <LABEL for="producto_imagen_01">Imagen 01</LABEL>  
-                            <INPUT type="file" id="producto_imagen_01" onchange="preview_01()">
-                        </p>
-                        <p>
-                            <LABEL for="producto_imagen_02">Imagen 02</LABEL>  
-                            <INPUT type="file" id="producto_imagen_02"  onchange="preview_02()">
-                        </p>
-                        <p>
-                            <LABEL for="producto_imagen_03">Imagen 03</LABEL>  
-                            <INPUT type="file" id="producto_imagen_03"  onchange="preview_03()">
-                        </p>
-                        
-                        <div class="alta-imagenes-preview">
-                            <img id="frame_01" src="img/NN_03_h75w75.png" class="producto_imagen" alt="Imagen 01"/>
-                            <img id="frame_02" src="img/NN_03_h75w75.png" class="producto_imagen" alt="Imagen 02"/>
-                            <img id="frame_03" src="img/NN_03_h75w75.png" class="producto_imagen" alt="Imagen 03"/>
+                            <div class="detalleAlta__contenido-descripcion">
+                                <input id="descripcion" type="textarea" width="" placeholder="Descripción detallada del producto" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                            </div>
+                            <div class="detalleAlta__contenido-descripcion importes">
+                                
+                                <label class="detalleAlta__label" for="precioLista">$Lista: </label>
+                                    <input id="precioLista" type="text" placeholder="Precio Lista" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                                <label class="detalleAlta__label" for="precioDto">$Descuento: </label>
+                                    <input id="precioDto" type="text" placeholder="Precio Promo" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                            </div>
+                            <div class="detalleAlta__contenido-descripcion importes">
+
+                                <label class="detalleAlta__label" for="evaluacion">Evaluación: </label>
+                                    <input id="evaluacion" type="text" placeholder="Valoración" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                                
+                                <label class="detalleAlta__label" for="evaluadores">Evaluadores: </label>
+                                    <input id="evaluadores" type="text" placeholder="Num total evaluadores" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+        
+                                <label class="detalleAlta__label" for="stock">Stock: </label>
+                                    <input id="stock" type="text" placeholder="Stock / existencia" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+
+                            </div>
+                            <div class="detalleAlta__contenido-descripcion">
+
+                                <label class="detalleAlta__label" for="observacion01">Observaciones: </label>
+                                <input id="observacion01" type="text" placeholder="Observación 01" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                                <input id="observacion02" type="text" placeholder="Observación 02" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                                <input id="observacion03" type="text" placeholder="Observación 03" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+                                <input id="esPromo" type="checkbox" class="detalleAlta__input">
+                                <span class="Mensaje"></span>
+
+                            </div>
+                        </div>
+                        <div class="detalleAlta_variables">
+                            <div class="detalleAlta_variables-titulo">Acciones</div>
+                            <div class="detalleAlta_variables-cantidad">
+                                <div class="accionesAlta" >
+                                    <button class="restar fa fa-plus-square" style="border:none; font-size:1.2em; color:darkblue;cursor:pointer;"></button>
+                                    <div class="restar fa fa-minus-square" style="border:none; font-size:1.2em; color:darkred;cursor:pointer;"></div>
+                                </div>
+                                
+                            </div>
                         </div>
                     </div>
-                    <p class="alta-input-combo">
-                        <LABEL for="producto_fabricanteId" >Fabricante</LABEL>  
-                        <select name="producto_fabricanteId" id="producto_fabricanteId">
-                            <option value="01">Sony</option>
-                            <option value="02">JBL</option>
-                            <option value="03">Canon</option>
-                            <option value="04">DJI</option>
-                            <option value="05">Google</option>
-                            <option value="06">Samsung</option>
-                            <option value="07">Apple</option>
-                            <option value="08">Philips</option>
-                            <option value="09">RCA</option>
-                        </select>
-                    </p>
-                    <p class="invisible alta-input-text">
-                        <LABEL for="producto_linkInfoTech">Info. Técnica (enlace)</LABEL>  
-                        <INPUT type="text" id="producto_linkInfoTech">
-                    </p>
-                    <p class="alta-input-combo">
-                        <LABEL for="producto_calificacion">Calificacion</LABEL>  
-                        <select name="producto_calificacion" id="producto_calificacion">
-                            <option value="01">01 estrella</option>
-                            <option value="02">02 estrellas</option>
-                            <option value="03">03 estrellas</option>
-                            <option value="04">04 estrellas</option>
-                            <option value="05">05 estrellas</option>
-                        </select>
-                    </p>
-                    <p class="alta-input-check">
-                        <label for="shipping">Envío sin cargo</label>
-                        <input type="checkbox" name="shipping" id="shipping" value="si">
-                    </p>
-                    <p class="alta-bloque-btn">
-                        <input type="submit" value="Dar de alta" class="alta-btn-form">
-                        <input type="reset" value="Limpiar formulario" class="alta-btn-form">
-                    </p>
-                    </fieldset>
-            </article>    
+                </form>
+                <datalist id="ListaCate">
+                    <option value = "Celulares">
+                    <option value = "Drones">
+                    <option value = "Fotografía">
+                    <option value = "Ordenadores">
+                    <option value = "Sonido">
+                    <option value = "TV">
+                    <option value = "Otros">
+                </datalist>
+            </section>
+            
+            <section class="listado-productos">
+                <!-- Acá va el listado Handelbars de productos -->
+                <div id="listado-productos"></div>
+            </section>
+        <br>
+        <br>
+        </section>
+    </article>
 
-    </form>
 
-</section>
-</main>
+
+
+
+
